--- a/signoz/deploy/docker/docker-compose.yaml
+++ b/signoz/deploy/docker/docker-compose.yaml
@@ -160,6 +160,7 @@ services:
       # - "1777:1777"     # pprof extension
       - "4317:4317" # OTLP gRPC receiver
       - "4318:4318" # OTLP HTTP receiver
+      - '54527:54527' # for syslogs setup
     depends_on:
       signoz:
         condition: service_healthy
