feat: added namespace in eks

--- a/EKS/override-values.yaml
+++ b/EKS/override-values.yaml
@@ -1,10 +1,10 @@
 global:
   cloud: aks
-  clusterName: keyklock  # change cluster name as per configurations
-  deploymentEnvironment: Production # change cluster name as per configurations
+  clusterName: AKS-DEV # change cluster name as per configurations
+  deploymentEnvironment: Development # change cluster name as per configurations
   resourceAttributes:
-    deployment.environment: Production # change cluster name as per configurations
-    k8s.cluster.name: keyklock # change cluster name as per configurations
+    deployment.environment: Development # change cluster name as per configurations
+    k8s.cluster.name: AKS-DEV # change cluster name as per configurations
 
 otelCollectorEndpoint: 10.16.21.4:4317 # SigNoz private ip
 otelInsecure: true
