--- a/EKS/override-values.yaml
+++ b/EKS/override-values.yaml
@@ -116,6 +116,10 @@ presets:
     extractMetadatas:
       - k8s.namespace.name
       - k8s.deployment.name
+      - k8s.daemonset.name
+      - k8s.statefulset.name
+      - k8s.replicaset.name
+      - k8s.job.name
       - k8s.pod.name
       - k8s.node.name
       # Add or remove metadata fields
