--- a/signoz/deploy/docker/otel-collector-config.yaml
+++ b/signoz/deploy/docker/otel-collector-config.yaml
@@ -48,7 +48,7 @@ processors:
         default: default
       - name: deployment.environment
         default: default
-      # This is added to ensure the uniqueness of the timeseries
+      # This is added to ensure the uniqueness of the timeseries.
       # Otherwise, identical timeseries produced by multiple replicas of
       # collectors result in incorrect APM metrics
       - name: signoz.collector.id
