--- a/VM/linux/config.yaml
+++ b/VM/linux/config.yaml
@@ -2,9 +2,9 @@ receivers:
   otlp:
     protocols:
       grpc:
-        endpoint: 0.0.0.0:4317
+        endpoint: 0.0.0.0:1972
       http:
-        endpoint: 0.0.0.0:4318
+        endpoint: 0.0.0.0:1973
   # Host metrics
   hostmetrics:
     collection_interval: 60s
@@ -69,7 +69,7 @@ processors:
 
 exporters:
   otlp:
-    endpoint: 10.16.21.4:4317
+    endpoint: 10.16.21.4:1972
     tls:
       insecure: true
 
@@ -102,3 +102,6 @@ service:
       receivers: [otlp, syslog, journald]
       processors: [resourcedetection, resource/host_identity, batch]
       exporters: [otlp]
+    
+## old 4317 = 1972
+## old 4318 = 1973
