--- a/signoz-2/deploy/docker/docker-compose.yaml
+++ b/signoz-2/deploy/docker/docker-compose.yaml
@@ -159,8 +159,8 @@ services:
       - LOW_CARDINAL_EXCEPTION_GROUPING=false
     ports:
       # - "1777:1777"     # pprof extension
-      - "1972:1972" # OTLP gRPC receiver
-      - "1973:1973" # OTLP HTTP receiver
+      - "1972:4317"   # host 1972 → container 4317 (gRPC)
+      - "1973:4318"   # host 1973 → container 4318 (HTTP)
       - '54527:54527' # for syslogs setup
     depends_on:
       signoz:
